--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Build and Push Image
+name: 1 Build and Push Image
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
